--- a/manifest.json
+++ b/manifest.json
@@ -7,11 +7,14 @@
 
 	"content_scripts":[
 		{
-			"matches": ["https://www.myhealth.va.gov/mhv-portal-web/*","file:///Users/*"],
-			"include_globs": ["*pageLabel=appointments","*mhv.portal"],
+			"matches": ["https://www.myhealth.va.gov/mhv-portal-web/*","file:///Users/hookerjs/*"],
+			"include_globs": ["*pageLabel=appointments","*mhv.portal","*HealtheVet.html"],
 			"js": ["VA-ical.js"],
 			"run_at": "document_idle"
 		}
+	],
+	"permissions": [
+		"tabs"
 	]
 
 }
